--- a/css/components/sidebar.css
+++ b/css/components/sidebar.css
@@ -1,6 +1,6 @@
 .sidebar {
     position: fixed;
-    width: 200 px; 
+    width: 15%; 
     left: 0;
     top: 0;
     bottom: 0;
@@ -45,4 +45,26 @@
 
 .sidebar a {
     font-size: 14px; 
+}
+
+
+@media (max-width: 720px) {
+    .sidebar {
+        width: 15%; 
+
+    .sidebar a {
+        font-size: 12px; 
+        padding: 6px 12px;
+    }
+}
+
+@media (max-width: 540px) {
+    .sidebar {
+        width: 15%; 
+    }
+
+    .sidebar a {
+        font-size: 10px; 
+        padding: 4px 8px;
+    }
 }
