--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,17 @@ p {
 }
 
 .page-content {
-  margin-left: 200px;
+    margin-left: 15%; /* Imposta il margine sinistro per corrispondere alla sidebar */
 }
 
+@media (max-width: 720px) {
+    .page-content {
+        margin-left: 15%; /* Mantieni il margine sinistro al 12% per schermi più piccoli */
+    }
+}
+
+@media (max-width: 540px) {
+    .page-content {
+        margin-left: 15%; /* Mantieni il margine sinistro al 12% per schermi molto piccoli */
+    }
+}
